# qt

./: .gitignore  abc.txt
TcpServer/: CMakeLists.txt  main.cpp  mytcpserver.cpp  mytcpserver.h  mytcpsocket.cpp  mytcpsocket.h  opedb.cpp  opedb.h  protocol.h  tcpserver.cpp  tcpserver.h  tcpserver.ui  wd.md
wp_demo/: CMakeLists.txt  config.qrc  document.cpp  document.h  document.ui  friend.cpp  friend.h  friendstyles.cpp  friendstyles.h  main.cpp  online.cpp  online.h  online.ui  opewidget.cpp  opewidget.h  privatechat.cpp  privatechat.h  privatechat.ui  protocol.h  regist.cpp  regist.h  styles.cpp  styles.h  tcpclient.cpp  tcpclient.h  tcpclient.ui
